Fixed spacing issue in toolbar

--- a/src/css/style_mosaico_tools.less
+++ b/src/css/style_mosaico_tools.less
@@ -881,7 +881,7 @@
   }
 }
 .mo-standalone #main-toolbox #tooltabs.ui-tabs > .ui-tabs-nav {
-  padding-left: 40px;
+  padding-left: 10px;
 }
 
 /****************************************************************************************************************************
